# Blank-Portfolio

./: .gitignore  README.md  main.py  pyproject-black.toml  pyproject.toml
.github/workflows/: launch-actions.yml  pypi-release.yml
black_portfolio/: data_models.py  utils.py
black_portfolio/data/: datasource.py
blank_portfolio/: data_models.py  main.py  utils.py
blank_portfolio/data/: datasource.py
blank_portfolio/models/: data_models.py
blank_portfolio/provider/: cli.py
blank_portfolio/services/: cli_service.py
blank_portfolio/utils/: data_utils.py  formatter_utils.py
tests/: test_data.py  test_data_models.py  test_utils.py
tests/model_tests/: test_data_models.py
tests/services_tests/: test_cli_service.py
tests/test_data/: test_data.py
tests/utils_tests/: test_data_utils.py
