[project]
name = "blank-portfolio"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "bump2version>=1.0.1",
    "click>=8.3.1",
    "dataclasses>=0.8; python_version < '3.7'",
    "flake8>=7.3.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "tox>=4.32.0",
    "wheel>=0.45.1",
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  # other classifiers as needed
]

[project.scripts]
blank-portfolio = "blank_portfolio.provider.cli:cli"

